--- a/static/css/z_style.css
+++ b/static/css/z_style.css
@@ -180,7 +180,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .fh5co-nav ul li a {
     font-size: 15px;
-    padding: 30px 15px;
+    padding: 30px 5px;
     color: rgba(255, 255, 255, 0.5);
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
@@ -1156,6 +1156,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .fh5co-blog > a img {
     width: 100%;
+    height: 238px;
 }
 
 @media screen and (max-width: 768px) {
@@ -1822,6 +1823,13 @@ h1, h2, h3, h4, h5, h6, figure {
     /*background: url(../images/loader.gif) center no-repeat #fff;*/
 }
 
+#motai_con label {
+    margin-left: -6px;
+    color: #000;
+    /*display: inline-block;*/
+    width: 100px;
+}
+
 /*下面是footer样式*/
 .footer-section {
     background-color: #099ecb;
@@ -1843,8 +1851,7 @@ h1, h2, h3, h4, h5, h6, figure {
     left: 50%;
     margin-left: -250px;
     top: 100px;
-    background-color: rgba(113, 129, 127, 1);
-    border: 1px solid #000;
+    background-color: rgba(255, 251, 240, 0.6);
     padding: 15px;
     text-align: center;
     opacity: 0.8;
@@ -1861,9 +1868,16 @@ h1, h2, h3, h4, h5, h6, figure {
     font-style: normal;
 }
 
+.modal_data label {
+    margin-left: -6px;
+    color: #000;
+    width: 100px;
+}
+
 .modal_data i {
     position: absolute;
-    left: 143px;
+    left: 194px;
+    color: #000;
     top: 9px;
 }
 
@@ -1899,7 +1913,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .mod-register {
     width: 500px;
-    background-color: rgba(113, 129, 127, 0.8);
+    background-color: rgba(255, 251, 240, 0.6);
     left: 50%;
     margin-left: -250px;
     top: 60px;
@@ -1951,7 +1965,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .mod-register .message-check {
     margin-left: 5px;
-    width: 92px;
+    width: 90px;
     height: 31px;
     margin-right: 0px;
     text-indent: 2px;
@@ -2004,7 +2018,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .identify ul li label {
-    color: white;
+    color: #000;
 }
 
 input[type="radio"], input[type="checkbox"] {
@@ -2067,8 +2081,8 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 .forget_pwd {
+    background-color: rgba(255, 251, 240, 0.6);
     width: 500px;
-    border: 1px solid red;
     position: absolute;
     left: 50%;
     margin-left: -250px;
@@ -2089,9 +2103,19 @@ input[type="radio"], input[type="checkbox"] {
     position: relative;
 }
 
+.forget_pwd label {
+    margin-left: -63px;
+    color: #000;
+    width: 100px;
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
 .forget_pwd i {
     position: absolute;
-    left: 5px;
+    left: 46px;
     top: 8px;
     color: black;
     font-size: 16px;
@@ -2118,6 +2142,16 @@ input[type="radio"], input[type="checkbox"] {
     background-color: rgba(0, 0, 0, 0.3);
     color: white;
     border: 1px solid #eee;
+}
+
+.forget_pwd span {
+    display: inline-block;
+    width: 150px;
+    /*visibility: hidden;*/
+    margin-left: 50px;
+    font-size: 12px;
+    color: red;
+    /*text-alig: left;*/
 }
 
 #id_account {
